게시글, 유저 컨트롤러 구현